--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
             </div>
         </nav>
         <div class="container">
+            <img src='/images/logo.png' alt='logo'/>
             <h1 style="text-align: center">Start your Search?</h1>
             <div class="row">
                 <div class="col s4">
