--- a/templates/myapp/new_search.html
+++ b/templates/myapp/new_search.html
@@ -5,6 +5,40 @@
 
      <h2 style='text-align:center'>{{ search | title }}</h2>
 
+     {% for post in final_postings %}
+     <div class='row'>
+        <div class="col s4">
+            <div class="card">
+                <div class="card-image">
+                    <a href="{{ post.1 }}"><img src="{{ post.3 }}" alt=""></a>
+                </div>
+                <div class="card-content">
+                    <p>{{ post.0 }}</p>
+                </div>
+                <div class="card-action">
+                    <a href="{{ post.1 }}">View listing: {{ post.2 }}</a>
+                </div>
+            </div>
+        </div>         
+     {% endfor %}
+    </div>
+
+     <!-- <div class="col s4">
+        <div class="card">
+            <div class="card-image">
+                <a href="{{ post.1 }}"><img src="https://i.pinimg.com/564x/86/aa/b2/86aab29c2da8c78fb667780dfa780920.jpg" alt=""></a>
+            </div>
+            <div class="card-content">
+                <p>{{ post.0 }}</p>
+            </div>
+            <div class="card-action">
+                <a href="{{ post.1 }}">View listing: {{ post.2 }}</a>
+            </div>
+        </div>
+    </div>         
+       
+
+
      <div class="row">
      
             <div class="col s4">
@@ -48,7 +82,7 @@
             </div>
 
     </div>
-
+ -->
 
 
 
